--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -2,23 +2,37 @@
     width: 100%;
     height: 10vh;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
     background-color: #1C3144;
 }
 .logo {
-    width: 30%;
+    width: 40%;
 }
-.menuListado {
-    width: 50%;
+.menu-list {
+    width: 60%;
     display: flex;
     justify-content: space-around;
     align-items: center;
+    display: none !important;
 }
-.menuListado button {
+
+.menu-list button {
     background-color: transparent;
 }
-.menuListado button:hover {
+.menu-list button:hover {
     background-color: transparent;
     color: #3182CE;
+}
+.menu-mobile {
+    margin-right: 1rem;
+}
+
+@media only screen and (min-width:769px) {
+    .menu-list {
+        display: flex !important;
+    }
+    .menu-mobile {
+        display: none !important;
+    }
 }
