--- a/src/components/Cart/Cart.css
+++ b/src/components/Cart/Cart.css
@@ -26,5 +26,6 @@ button {
         display: flex;
         justify-content: center;
         align-items: center;
+        margin-top: 2rem;
     }
 }
