--- a/src/components/Item/Item.css
+++ b/src/components/Item/Item.css
@@ -1,5 +1,10 @@
+.cardContainer {
+    width: 90%;
+    margin: 0 auto;
+}
 .card {
     width: 90%;
+    /* margin: 0 auto; */
     margin: 1rem;
     border-radius: 5px;
     background-color: #fff;
@@ -43,4 +48,21 @@
     height: 3rem;
     border-radius: 5px;
     color: #fff;
+}
+
+@media only screen and (min-width: 769px) {
+    .cardContainer {
+        width: 40%;
+        /* display: flex;
+        flex-direction: column;
+        align-items: center; */
+    }
+}
+@media only screen and (min-width: 1024px) {
+    .cardContainer {
+        width: 20%;
+        /* display: flex;
+        flex-direction: column;
+        align-items: center; */
+    }
 }
