--- a/src/components/ItemList/ItemList.css
+++ b/src/components/ItemList/ItemList.css
@@ -5,8 +5,21 @@
 @media only screen and (min-width: 481px) {
     .cardSection {
         display: flex;
+        flex-direction: column;
         justify-content: center;
         align-items: center;
-        width: 100%;
+        width: 90%;
+        margin: 0 auto;
+    }
+}
+@media only screen and (min-width: 769px) {
+    .cardSection {
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: row;
+        /* justify-content: center; */
+        /* align-items: center; */
+        width: 90%;
+        margin: 0 auto;
     }
 }
